2.0/eureka/eureka-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: svc-eureka
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: eureka.baidu.com
    http:
      paths:
      - path:
        backend:
          serviceName: svc-eureka
          servicePort: 8001
